--- a/assets/styles/layout/_slides.scss
+++ b/assets/styles/layout/_slides.scss
@@ -22,6 +22,11 @@
     max-width: 200px;
 }
 
+.slide--one, 
+.slide--two {
+    background-color: lightgrey;
+}
+
 // Section for styling and animating the introduction
 .slide--one {
     
